--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
+    "react-toastify": "^10.0.6",
     "sass": "^1.79.5"
   },
   "devDependencies": {
